// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots activity/ActivityItem Activity Channel Package Updated 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <svg
              focusable="false"
              height="30px"
              preserveAspectRatio="xMidYMid meet"
              style="transform: rotate(360deg);"
              viewBox="0 0 24 24"
              width="30px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
                fill="#00d3ff"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <p
              class="MuiTypography-root makeStyles-appName MuiTypography-body1"
            >
              some app
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
      >
        <p
          class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          02:56 PM
        </p>
      </div>
      
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        A description
      </div>
    </div>
  </li>
</div>
`;

exports[`Storyshots activity/ActivityItem Warning 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <svg
              focusable="false"
              height="30px"
              preserveAspectRatio="xMidYMid meet"
              style="transform: rotate(360deg);"
              viewBox="0 0 24 24"
              width="30px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2L1 21h22M12 6l7.53 13H4.47M11 10v4h2v-4m-2 6v2h2v-2"
                fill="#ff5500"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root"
          >
            <p
              class="MuiTypography-root makeStyles-appName MuiTypography-body1"
            >
              some app
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
      >
        <p
          class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          02:56 PM
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayInline"
          >
            GROUP
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-groupLink MuiTypography-colorPrimary"
            href="/apps/XXXX-XXX/groups/YYYY-YYYY"
          >
            some group
          </a>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        A description
      </div>
    </div>
  </li>
</div>
`;
